--- a/client/index.html
+++ b/client/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SLasshyCodex-  Your OWN AI</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Slasshy AI</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="app">
+    <script type="module" src="/main.js"></script>
+  
+    <div id="app">
       <div id="chat_container"></div>
-
-      <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="Ask codex..."></textarea>
-        <button type="submit"><img src="assets/send.svg" alt="send" />
-      </form>
     </div>
 
-    <script type="module" src="script.js"></script>
-  </body>
+    <form>
+        <textarea name="prompt" rows="1" cols="1" placeholder="ASK Slasshy's Artificial Inteligence..."></textarea>
+          <button type="submit"><img src="assets/send.svg" /></button>
+  
+    </form>
+  </div>
+  
+  <script type="module" src="/script.js"></script>
+  
+  
+  
+</body>
 </html>
