--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     </form>
   </div>
   
-  <script type="module" src="/script.js"></script>
+  <script type="module" src="script.js"></script>
   
   
   
